# devproc2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  devproc_cli.py  pyproject.toml
docs/: index.md
docs/archive/: index.md
docs/archive/mvp_impl/: 01_milestones.md  02_compiler_pipeline.md  index.md
docs/archive/pi05/: 09_pi05_refactor_plan.md  10_phase0_baseline.md  11_framework_boundary_refactor.md
docs/archive/tasks/: 2026-05-16-plan.md
docs/design/: IR_Value_design.md  abi_artifact.md  control_flow.md  dynamic_shape.md  e2e_demo.md  elegant_ir_design.md  index.md  ir_refactor_plan.md  kernel_launch.md  kernel_register.md  memory_planning.md  mvp.md  overview.md  packed_func.md  value_system.md  vm.md  从llama.cpp中学到了什么.md
docs/mvp_impl/: 00_infra.md  01_milestones.md  03_runtime_design.md  index.md
docs/pi05/: 01_frontend_nn_module.md  02_ir_attr_ops.md  03_kernels_lowering.md  04_weight_artifact_quant.md  05_runtime_accuracy_milestones.md  06_performance_snapshot.md  07_frontend_dsl_refactor.md  08_build_run_profile.md  09_pi05_refactor_plan.md  10_phase0_baseline.md  11_framework_boundary_refactor.md  12_compile_flow_refactor.md  13_product_build_quickstart.md  14_openpi05_devproc_compile_run_flow.md  index.md
docs/tasks/: 2026-05-18-pi05-refactor.md
examples/kv_cache_mvp/: ref_impl.py  run.py
python/devproc2/: __init__.py  build.py  inspect.py
python/devproc2/artifact/: __init__.py  builder.py  manifest.py  pi05.py
python/devproc2/compiler/: pass_context.py
python/devproc2/compiler/op/: __init__.py  emit.py  infer.py  nn.py  registry.py  schema.py  tensor.py
python/devproc2/compiler/passes/: _rewriter.py  control_flow_normalize.py  control_flow_verify.py  dps_lowering.py  emit_abi.py  emit_executable.py  emit_kernels.py  infer_struct_info.py  kernel_select.py  lower_tensor_create_to_alloc.py  memory_planning.py  shape_assertion_insert.py  shape_constraint_verify.py  shape_expr_lowering.py  triton_aot_compile.py  vm_codegen.py
python/devproc2/export/: __init__.py  cli.py  pi05.py  pipeline.py  recipe.py
python/devproc2/frontend/: dsl.py  scope.py
python/devproc2/integrations/: __init__.py
python/devproc2/integrations/pi05/: __init__.py  weights.py
python/devproc2/ir/: __init__.py  analysis.py  attrs.py  nodes.py  op_ref.py  ops.py  prim_expr.py  printer.py  verifier.py
python/devproc2/kernel/: __init__.py  provider.py  registry.py
python/devproc2/models/: __init__.py
python/devproc2/models/pi05/: __init__.py  artifact.py  config.py  diagnostic_export_spec.py  export.py  export_spec.py  kernels.py  model.py  modules.py  ops.py  recipe.py  weights.py
python/devproc2/models/pi05/cuda/: CMakeLists.txt  pi05_kernels.cu
python/devproc2/models/pi05/cuda/backends/fp8_gemm/: cublaslt_runner.cc  cutlass_fp8_gemm_sm89.h
python/devproc2/models/pi05/cuda/fa2/: PROVENANCE.md  fa2_wrapper.cu
python/devproc2/models/pi05/cuda/fa2/flash_attn_2_src/cutlass/include/cutlass/epilogue/thread/: activation.h
python/devproc2/models/pi05/cuda/fa2/flash_attn_2_src/cutlass/include/cutlass/layout/: permute.h
python/devproc2/models/pi05/cuda/fa2/flash_attn_2_src/flash_attn/: flash_fwd_launch_template.h  philox.cuh  philox_unpack.cuh  softmax.h  static_switch.h
python/devproc2/models/pi05/graph/: __init__.py  _helpers.py  decoder.py  denoise.py  ffn.py  layers.py  prefix.py  sample.py  vision.py
python/devproc2/nn/: __init__.py  builder.py  layers.py  module.py  specs.py
python/devproc2/pi05/: __init__.py  artifact.py  export.py  kernels.py  modules.py  torch_oracle.py
python/devproc2/pi05/cuda/: pi05_kernels.cu
python/devproc2/quantization/: __init__.py  fp8.py  manifest.py
python/devproc2/utils/: __init__.py  dtype.py
python/devproc2/vm/: __init__.py  executable.py  interpreter.py  serializer.py
python/devproc2/weights/: __init__.py  package.py
runtime/: CMakeLists.txt
runtime/include/devproc2/runtime/: cuda_gemm.h  cuda_graph.h  cuda_kernel_registry.h  device_api.h  kernel.h  object.h  object_ref.h  packed_backend.h  packed_func.h  shape_tuple.h  storage.h  stream.h  string.h  tensor.h  tokenizer.h  tuple.h  vm.h  vm_value.h  weight_store.h
runtime/src/: builtins.cc  device_api.cc  object_ref.cc  packed_backend.cc  packed_func.cc  storage.cc  stream.cc  tensor.cc  tokenizer.cc  vm.cc  weight_store.cc
runtime/src/cuda/: cuda_device_api.cc  cuda_gemm.cc  cuda_graph.cc  cuda_kernel.cc  cuda_kernel_registry.cc  cuda_memory_pool.cc  cuda_module.cc  cutlass_fp8_gemm_sm89.cu
runtime/tests/: CMakeLists.txt  bench_cutlass_fp8_sm89.cu  bench_pi05_denoise.cc  test_cuda_graph.cc  test_m10_packed_func.cc  test_m11_kernel.cc  test_m9_artifact.cc  test_pi05_artifact_load.cc  test_pi05_cuda_gemm.cu  test_pi05_denoise_oracle.cc  test_pi05_kernel_launch.cc  test_pi05_sample_tokens_tokenizer.cc  test_pi05_tokenizer.cc  test_pi05_weight_store.cc  test_x1_device_api.cc
tests/compiler/: test_cuda_custom_call.py  test_m10_packed_func.py  test_m11_kernel.py  test_m12_demo.py  test_m3_frontend.py  test_m4_dynamic_shape.py  test_m6_dps_lowering.py  test_m7_memory_planning.py  test_m8_vm.py  test_m9_artifact.py  test_op_registry.py  test_pi05_artifact.py  test_pi05_fast_modules.py  test_pi05_kernel_catalog.py  test_pi05_nn_frontend.py  test_pi05_weight_package.py  test_product_build.py  test_x2_shape_builtins.py
tests/ir/: test_m2_ir.py  test_m3_cf.py
tools/: __init__.py
tools/pi05/: __init__.py  convert_weights.py  dump_torch_oracle.py
